// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test-vault/features snapshot coverage > renders card-types/cloze.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Extra": "",
      "Source": "<a href="obsidian://open?vault=Vault&file=card-types%2Fcloze.md#%5Ecard-0">Open in Obsidian</a>",
      "Text": "<p>The mitochondria is the {{c1::powerhouse}} of the cell.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "card-types",
    "fields": {
      "Extra": "",
      "Source": "<a href="obsidian://open?vault=Vault&file=card-types%2Fcloze.md#%5Ecard-1">Open in Obsidian</a>",
      "Text": "<p>{{c1::Highlighted cloze}} inside a sentence.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/fenced-basic.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>Hypertext Transfer Protocol.</p>",
      "Front": "<p>What does HTTP stand for?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=card-types%2Ffenced-basic.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/fenced-reversed.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>Transmission Control Protocol</p>",
      "Front": "<p>TCP</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=card-types%2Ffenced-reversed.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic-reversed",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/inline-basic.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>Paris.</p>",
      "Front": "<p>What is the capital of France?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=card-types%2Finline-basic.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/inline-reversed.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>Four.</p>",
      "Front": "<p>What is 2 + 2?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=card-types%2Finline-reversed.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic-reversed",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/legacy-hashtag.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>100 degrees Celsius.</p>",
      "Front": "<p>What is the boiling point of water at sea level?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=card-types%2Flegacy-hashtag.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/code-blocks.md 1`] = `
[
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>Prints  to stdout.</p>",
      "Front": "<p>What does  do?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=content%2Fcode-blocks.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/frontmatter-deck.md 1`] = `
[
  {
    "deckName": "Custom::Subdeck",
    "fields": {
      "Back": "<p>Custom::Subdeck.</p>",
      "Front": "<p>What deck does this card belong to?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=content%2Ffrontmatter-deck.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/frontmatter-tags.md 1`] = `
[
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>Plants converting light into energy.</p>",
      "Front": "<p>What is photosynthesis?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=content%2Ffrontmatter-tags.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
      "biology",
      "custom-tag",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/images.md 1`] = `
[
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>It shows a flow.</p>",
      "Front": "<p>Describe the diagram <img src="45f018d9703bdbe54824e9eb04cf0e54eb6801e8.png"></p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=content%2Fimages.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A screenshot.</p>",
      "Front": "<p>What does this look like?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=content%2Fimages.md#%5Ecard-1">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/wikilinks.md 1`] = `
[
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A page in Obsidian.</p>",
      "Front": "<p>What is a <a href="obsidian://open?vault=Vault&amp;file=note">note</a>?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=content%2Fwikilinks.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>Same target, different display.</p>",
      "Front": "<p>What is <a href="obsidian://open?vault=Vault&amp;file=note">aliased text</a>?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=content%2Fwikilinks.md#%5Ecard-1">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A link to a heading.</p>",
      "Front": "<p>What is <a href="obsidian://open?vault=Vault&amp;file=note#Heading">note#Heading</a>?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=content%2Fwikilinks.md#%5Ecard-2">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A link to a block.</p>",
      "Front": "<p>What is <a href="obsidian://open?vault=Vault&amp;file=note#%5Eblock-id">note#^block-id</a>?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=content%2Fwikilinks.md#%5Ecard-3">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders interactions/image-in-reversed.md 1`] = `
[
  {
    "deckName": "interactions",
    "fields": {
      "Back": "<p>The flag of France.</p>",
      "Front": "<img src="760b5ea4a888728b0697120e6a87662fbddfabd0.png">",
      "Source": "<a href="obsidian://open?vault=Vault&file=interactions%2Fimage-in-reversed.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic-reversed",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders interactions/multiple-cards-per-note.md 1`] = `
[
  {
    "deckName": "interactions",
    "fields": {
      "Back": "<ol start="2">
<li></li>
</ol>",
      "Front": "<p>What is 1 + 1?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=interactions%2Fmultiple-cards-per-note.md#%5Ecard-0">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "interactions",
    "fields": {
      "Back": "<ol start="4">
<li></li>
</ol>",
      "Front": "<p>What is 2 + 2?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=interactions%2Fmultiple-cards-per-note.md#%5Ecard-1">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "interactions",
    "fields": {
      "Back": "<p>6</p>",
      "Front": "<p>What is 3 + 3?</p>",
      "Source": "<a href="obsidian://open?vault=Vault&file=interactions%2Fmultiple-cards-per-note.md#%5Ecard-2">Open in Obsidian</a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "interactions",
    "fields": {
      "Extra": "",
      "Source": "<a href="obsidian://open?vault=Vault&file=interactions%2Fmultiple-cards-per-note.md#%5Ecard-3">Open in Obsidian</a>",
      "Text": "<p>The {{c1::mitochondria}} is the powerhouse of the cell.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders interactions/wikilink-in-cloze.md 1`] = `
[
  {
    "deckName": "interactions",
    "fields": {
      "Extra": "",
      "Source": "<a href="obsidian://open?vault=Vault&file=interactions%2Fwikilink-in-cloze.md#%5Ecard-0">Open in Obsidian</a>",
      "Text": "<p>The {{c1::<a href="obsidian://open?vault=Vault&amp;file=capital">capital</a>}} of France is Paris.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "interactions",
    "fields": {
      "Extra": "",
      "Source": "<a href="obsidian://open?vault=Vault&file=interactions%2Fwikilink-in-cloze.md#%5Ecard-1">Open in Obsidian</a>",
      "Text": "<p>The {{c1::<a href="obsidian://open?vault=Vault&amp;file=capital">capital city</a>}} of Italy is Rome.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;
